Wdrożenie edycji reklam z podziałem na uprawnienia
